--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/construcaoGif.gif" alt="">
+              <img class="img-fluid" src="img/portfolio/construcao.jpg" alt="">
             </div>
           </div>
   
@@ -210,7 +210,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/construcaoGif.gif" alt="">
+              <img class="img-fluid" src="img/portfolio/construcao.jpg" alt="">
             </div>
           </div>
   
@@ -222,7 +222,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/construcaoGif.gif" alt="">
+              <img class="img-fluid" src="img/portfolio/construcao.jpg" alt="">
             </div>
           </div>
   
@@ -467,9 +467,9 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/construcao.jpg" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/site-construcao.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5"></p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
