alteracao de sobre do matheus

--- a/index.html
+++ b/index.html
@@ -426,18 +426,18 @@
           <img class="img-fluid" src="img/portfolio/matheus.jpg" alt="">
           <div class="info">
             <p class="name">Matheus Cardoso</p>
-            <div class="description">Estudante de Computação na PUC-GO. Estagiário da LG Sistemas.</div>
+            <div class="description">Estudante de Computação na PUC-GO e estagiário da LG Sistemas. Dentro da universidade já participou de atividades como monitoria, iniciação científica e liga acadêmica. Tem como objetivo concluir um mestrado e doutorado e um dia lecionar em uma grande universidade brasileira.</div>
             <div class="social-medias">
               <a class="btn btn-social mx-1" href="https://www.linkedin.com/in/caeduob/" target="_blank">
                 <i class="fab fa-fw fa-linkedin"></i>
               </a>
-              <a class="btn btn-social mx-1" href="https://github.com/zevet" target="_blank">
+              <a class="btn btn-social mx-1" href="https://github.com/SCMatheus" target="_blank">
                 <i class="fab fa-fw fa-github-alt"></i>
               </a>
-              <a class="btn btn-social mx-1" href="https://github.com/zevet" target="_blank">
+              <a class="btn btn-social mx-1" href="https://www.instagram.com/msouzacardoso/" target="_blank">
                 <i class="fab fa-fw fa-instagram"></i>
               </a>
-              <a class="btn btn-social mx-1" href="https://github.com/zevet" target="_blank">
+              <a class="btn btn-social mx-1" href="https://www.facebook.com/matheus.cardoso.1217" target="_blank">
                 <i class="fab fa-fw fa-facebook"></i>
               </a>
             </div>
