--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <!-- Portfolio Item 1 -->
         <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-plus fa-3x"></i>
@@ -197,7 +197,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/construcao.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/printscreen.png" alt="">
             </div>
           </div>
   
@@ -289,7 +289,7 @@
 
         <!-- Portfolio Item 1 -->
         <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-plus fa-3x"></i>
@@ -401,48 +401,61 @@
     </div>
 
     <section class="container members texto">
-      <div class="row member">
-        <img class="img-fluid" src="img/portfolio/carlos.jpeg" alt="">
-        <div class="info">
-          <p class="name">Carlos Eduardo O. Bueno</p>
+
+      <!-- CARLOS EDUARDO -->
+      <div class="container member">
+        <div class="row justify-content-center">
+          <img class="img-fluid" src="img/portfolio/carlos.jpeg" alt="">
+        </div>
+        <div class="row justify-content-center">
+          <h2 class="row name">Carlos Eduardo O. Bueno</h2>
+        </div>
+        <div class="row info justify-content-center">
           <div class="description">Estudante de Computação na PUC-GO. Backend developer na Encaixe.</div>
-          <div class="social-medias">
-            <a class="btn btn-social mx-1" href="https://www.linkedin.com/in/caeduob/" target="_blank">
-              <i class="fab fa-fw fa-linkedin"></i>
-            </a>
-            <a class="btn btn-social mx-1" href="https://github.com/zevet" target="_blank">
-              <i class="fab fa-fw fa-github-alt"></i>
-            </a>
-            <a class="btn btn-social mx-1" href="https://github.com/zevet" target="_blank">
-              <i class="fab fa-fw fa-instagram"></i>
-            </a>
-            <a class="btn btn-social mx-1" href="https://github.com/zevet" target="_blank">
-              <i class="fab fa-fw fa-facebook"></i>
-            </a>
-          </div>
+        </div>
+        <div class="row justify-content-center">
+          <a class="btn btn-social mx-1" href="https://www.linkedin.com/in/caeduob/" target="_blank">
+            <i class="fab fa-fw fa-linkedin"></i>
+          </a>
+          <a class="btn btn-social mx-1" href="https://github.com/zevet" target="_blank">
+            <i class="fab fa-fw fa-github-alt"></i>
+          </a>
+          <a class="btn btn-social mx-1" href="https://github.com/zevet" target="_blank">
+            <i class="fab fa-fw fa-instagram"></i>
+          </a>
+          <a class="btn btn-social mx-1" href="https://github.com/zevet" target="_blank">
+            <i class="fab fa-fw fa-facebook"></i>
+          </a>
         </div>
       </div>
-        <div class="row member">
+
+      <!-- MATHEUS CARDOSO -->
+      <div class="container member">
+        <div class="row justify-content-center">
           <img class="img-fluid" src="img/portfolio/matheus.jpg" alt="">
-          <div class="info">
-            <p class="name">Matheus Cardoso</p>
-            <div class="description">Estudante de Computação na PUC-GO e estagiário da LG Sistemas. Dentro da universidade já participou de atividades como monitoria, iniciação científica e liga acadêmica. Tem como objetivo concluir um mestrado e doutorado e um dia lecionar em uma grande universidade brasileira.</div>
-            <div class="social-medias">
-              <a class="btn btn-social mx-1" href="https://www.linkedin.com/in/caeduob/" target="_blank">
-                <i class="fab fa-fw fa-linkedin"></i>
-              </a>
-              <a class="btn btn-social mx-1" href="https://github.com/SCMatheus" target="_blank">
-                <i class="fab fa-fw fa-github-alt"></i>
-              </a>
-              <a class="btn btn-social mx-1" href="https://www.instagram.com/msouzacardoso/" target="_blank">
-                <i class="fab fa-fw fa-instagram"></i>
-              </a>
-              <a class="btn btn-social mx-1" href="https://www.facebook.com/matheus.cardoso.1217" target="_blank">
-                <i class="fab fa-fw fa-facebook"></i>
-              </a>
-            </div>
-          </div>
         </div>
+        <div class="row justify-content-center">
+          <h2 class="name">Matheus Cardoso</h2>
+        </div>
+        <div class="row justify-content-center">
+          <div class="description">Estudante de Computação na PUC-GO e estagiário da LG Sistemas. Dentro da universidade já participou de atividades como monitoria, iniciação científica e liga acadêmica. Tem como objetivo concluir um mestrado e doutorado e um dia lecionar em uma grande universidade brasileira.</div>
+        </div>
+        <div class="row justify-content-center">
+          <a class="btn btn-social mx-1" href="https://www.linkedin.com/in/caeduob/" target="_blank">
+            <i class="fab fa-fw fa-linkedin"></i>
+          </a>
+          <a class="btn btn-social mx-1" href="https://github.com/SCMatheus" target="_blank">
+            <i class="fab fa-fw fa-github-alt"></i>
+          </a>
+          <a class="btn btn-social mx-1" href="https://www.instagram.com/msouzacardoso/" target="_blank">
+            <i class="fab fa-fw fa-instagram"></i>
+          </a>
+          <a class="btn btn-social mx-1" href="https://www.facebook.com/matheus.cardoso.1217" target="_blank">
+            <i class="fab fa-fw fa-facebook"></i>
+          </a>
+        </div>
+      </div>
+
     </section>
   </section>
   
@@ -498,7 +511,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Atividade em Construção</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Jogo Casual Quiz</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -508,14 +521,29 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/site-construcao.png" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/printscreen.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
+
+                <div class="descricao-projeto mb-5">
+                  <h3>Com quem você se parece</h3>
+                  <p>
+                    Jogo desenvolvido para a matéria de Tecnologia de Construção de Softwares da PUC-GO durante o período letivo 2020/1.
+                  </p>
+                  <h3>Objetivo</h3>
+                  <p>
+                    Criar um quiz interativo, de forma que o usuário contribua para uma coleta de dados de forma agradável.
+                  </p>
+                  <h3>Tecnologias utilizadas</h3>
+                    <p>Excalibujs, Nodejs, NPM, Typescript</p>
+                </div>
+
+
+                <a class="btn btn-primary" href="https://github.com/zevet/quizGame" target="_blank data-dismiss="modal">
                   Ver código no Github
-                  <a class="btn btn-social btn-outline-light mx-1" href="https://github.com/zevet" target="_blank">
+                  <a class="btn btn-social mx-1">
                     <i class="fab fa-fw fa-github-alt"></i>
                   </a>
-                </button>
+                </a>
               </div>
             </div>
           </div>
